@@ -63,6 +63,8 @@ public class WikiBase {
 	/** Name of the default footer topic. */
 	public static final String SPECIAL_PAGE_BOTTOM_AREA = "BottomArea";
 	/** Name of the default jamwiki.css topic. */
+	public static final String SPECIAL_PAGE_SPECIAL_PAGES = "SpecialPages";
+	/** Name of the default jamwiki.css topic. */
 	public static final String SPECIAL_PAGE_STYLESHEET = "StyleSheet";
 
 	static {
