@@ -245,6 +245,7 @@ setup.caption.adminlogin=Administrator login
 setup.error.notrequired=System setup er allerede udf\u00F8rt. Se administrations sider for at lave \u00E6ndringer.
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=Setup
+specialpages.title=Special pages
 topic.categories=Kategorier
 topic.category.images=Billeder i kategori &quot;{0}&quot;
 topic.category.numimages=Der er {0} billeder i kategori &quot;{1}&quot;
