@@ -245,6 +245,7 @@ setup.caption.adminlogin=Administrator Benutzer-Login
 setup.error.notrequired=Das Aufsetzen des Systems ist schon beendet.\r\nGehen Sie zur "Admin" Seite um Einstellungen anzupassen.
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=Setup
+specialpages.title=Special pages
 topic.categories=Kategorien
 topic.category.images=Bilder in Kategorie &quot;{0}&quot;
 topic.category.numimages=Es gibt {0} Bilder in Kategorie &quot;{1}&quot;
