@@ -245,6 +245,7 @@ setup.caption.adminlogin=Connexion comme administrateur
 setup.error.notrequired=Installation syst\u00E8me d\u00E9j\u00E0 r\u00E9alis\u00E9e.  Voir la page administration pour modifier les r\u00E9glages.
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=Installation
+specialpages.title=Special pages
 topic.categories=Cat\u00E9gories
 topic.category.images=Images dans la cat\u00E9gorie &quot;{0}&quot;
 topic.category.numimages=Il y a {0} images dans la cat\u00E9gory &quot;{1}&quot;
