@@ -245,6 +245,7 @@ setup.caption.adminlogin=Login administratora
 setup.error.notrequired=Instalacja zako\u0144czona.  Wy\u015Bwietl stron\u0119 administratora je\u015Bli chcesz wprowadzi\u0107 zmiany w konfiguracji.
 setup.error.upgrade=Instalator wykry\u0142 istniej\u0105c\u0105 baz\u0119 danych JAMWiki. Je\u015Bli chcesz dokona\u0107 uaktualnienia do nowej wersji, zapoznaj si\u0119 z dokumentem UPGRADE.txt. Instaluj\u0105c now\u0105 wersj\u0119 JAMWiki na istniej\u0105cej bazie danych mog\u0105 wyst\u0105pi\u0107 b\u0142\u0119dy. Wci\u015Bnij przycisk Dalej je\u015Bli chcesz dokona\u0107 nowej instalacji.
 setup.title=Instalacja
+specialpages.title=Special pages
 topic.categories=Kategorie
 topic.category.images=Obrazy w kategorii &quot;{0}&quot;
 topic.category.numimages=Liczba obraz\u00F3w w kategorii &quot;{1}&quot;\: {0}
