@@ -245,6 +245,7 @@ setup.caption.adminlogin=\u7BA1\u7406\u54E1\u767B\u9304
 setup.error.notrequired=\u7CFB\u7D71\u5B89\u88DD\u5DF2\u7D93\u5B8C\u6210\uFF0C\u9032\u5165\u7BA1\u7406\u9801\u9762\u9032\u884C\u8A2D\u7F6E\u3002
 setup.error.upgrade=A new installation is being performed, but a JAMWiki database already exists.  If JAMWiki was previously installed, please use the upgrade process described in the UPGRADE.txt document.  If you continue with a new installation the existing database schema may not match the current JAMWiki version and errors will occur.  Press the continue button below only if you wish to continue with the new install.
 setup.title=\u5B89\u88DD
+specialpages.title=Special pages
 topic.categories=\u5206\u985E
 topic.category.images=\u5728\u5206\u985E &quot;{0}&quot; \u4E2D\u7684\u5716\u7247
 topic.category.numimages=\u6709 {0} \u500B\u5716\u7247\u5728\u5206\u985E &quot;{1}&quot; \u4E2D
