@@ -20,6 +20,7 @@ Special\:Print=
 Special\:RecentChanges=
 Special\:Search=
 Special\:Setup=
+Special\:Specialpages=
 Special\:TopicsAdmin=
 Special\:Translation=
 Special\:Upgrade=
